@@ -175,8 +175,8 @@ Name Tokens
     Token type for function names.
 
 `Name.Function.Magic`
-    same as `Name.Function` but for function names that have an implicit use in
-    a language (e.g. ``__init__`` method in Python).
+    same as `Name.Function` but for special function names that have an implicit use
+    in a language (e.g. ``__init__`` method in Python).
 
 `Name.Label`
     Token type for label names (e.g. in languages that support ``goto``).
@@ -206,8 +206,8 @@ Name Tokens
     same as `Name.Variable` but for instance variables.
 
 `Name.Variable.Magic`
-    same as `Name.Variable` but for variable names that have an implicit use in
-    a language (e.g. ``__doc__`` in Python).
+    same as `Name.Variable` but for special variable names that have an implicit use
+    in a language (e.g. ``__doc__`` in Python).
 
 
 Literals
